--- a/index.htm
+++ b/index.htm
@@ -309,7 +309,7 @@
 
 
     <hr/>
-   <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=sqJ2aWfLDhyiP5UedpMQ6rTI4AO99yuWDg1fKk8I7u8'></script>
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=hoJ69QVZJSKo0CN84x0cWXi_Gc9b1KJ9KDy669yRFPU&cl=ffffff&w=a"></script>
     <p>Last Updated: Jan 30th, 2020</p>
 
 </body>
