--- a/index.htm
+++ b/index.htm
@@ -178,7 +178,7 @@
     <hr/>
     <div id="bio" class="contentWrap">
         <h3>About Me</h3>
-        <p style="line-height:1.4"> I am an assistant professor with the Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. I recieved the Ph.D. degree from Aalborg University, Denmark, in January 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. From April 2018 to September 2018, I was an research assistant in Aalborg University, Denmark. I received the M.Sc. degree and the B.Sc. degree from <a href="http://www.neu.edu.cn/"> Northeastern University</a>, China, in 2017 and 2014, respectively.</p>
+        <p style="line-height:1.4"> I am an assistant professor with the Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. I recieved the Ph.D. degree from Aalborg University, Denmark, in January 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. From April 2018 to September 2018, I was a research assistant in Aalborg University, Denmark. I received the M.Sc. degree and the B.Sc. degree from <a href="http://www.neu.edu.cn/"> Northeastern University</a>, China, in 2017 and 2014, respectively.</p>
     </div>
 
 
