--- a/index.htm
+++ b/index.htm
@@ -269,8 +269,8 @@
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Visiting Research Students]</p>
         <ul>
-            <li>Yumeng Song (Ph.D. candidate from Northeastern Univeristy, from October 2022 to September 2024), Topic: Trajectory Analytics </li>
-            <li>Zhen Song (Ph.D. candidate from Northeastern Univeristy, from October 2022 to September 2023), Topic: Spatio-Temporal Graph Neural Networks</li>        
+            <li>Yumeng Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2024), Topic: Trajectory Analytics </li>
+            <li>Zhen Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2023), Topic: Spatio-Temporal Graph Neural Networks</li>        
         </ul>
      
     </div>
