--- a/index.htm
+++ b/index.htm
@@ -287,7 +287,7 @@
             <li>IEEE Transactions on Knowledge and Data Engineering (TKDE)</li>
 	    <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 	    <li>IEEE Transactions on Circuits and Systems II (TCAS II)</li>
- 	    <li>IEEE Transactions on Emerging Topics in Computational Intelligence </li>
+ 	    <li>Transactions in GIS </li>
           
         </ul>
 
