--- a/index.html
+++ b/index.html
@@ -207,6 +207,11 @@
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
 <ol class="rj">
+<li><b>Xiaoze Liu, Junyang Wu, Tianyi Li</b>, Lu Chen, Yunjun Gao. <br/>
+<p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. </p>
+<p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
+</li>	
+	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Jilin Hu. <br/>
 <p>Evolutionary Clustering of Moving Objects. (<b>Best Paper Award</b>)</p>
 <p><i>The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022.</p>
@@ -293,8 +298,9 @@
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Conference Program Committee Member]</p>
         <ul>
-		<li>CIKM 2022</li>
+		<li>SIGKDD 2023</li>
 		<li>AAAI 2023</li>
+		<li>CIKM 2022</li>		
 		
         </ul>
     </div>
