--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
 <ol class="rj">
-<li><b>Xiaoze Liu, Junyang Wu, Tianyi Li</b>, Lu Chen, Yunjun Gao. <br/>
+<li>Xiaoze Liu, Junyang Wu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao. <br/>
 <p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. </p>
 <p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
 </li>	
