--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 <li>Yunjun Gao, Xiaoze Liu, Jingxuan Wu, <b>Tianyi Li</b>, Pengfei Wang, Lu Chen.<br/>
 <p>ClusterEA: Scalable Entity Alignment with Stochastic Training and Normalized Mini-batch Similarities.</p>
-<p><i>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>SIGKDD</b></i>), 2022.</p>
+<p><i>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022.</p>
 </li>
 
 <li>Yushuai Li, <b>Tianyi Li</b>, Huaguang Zhang, Xiangpeng Xie, Qiuye Sun.<br/>
@@ -261,7 +261,7 @@
 
        
 
-        <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Selected Journal Reviewer]</p>
+        <p style="margin-top: 20px;font-weight: bold;color: #0476d6"></p>
         <ul>
             <li>Best Paper Award, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li>
 	    <li>One of the Best Papers, The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>       
@@ -284,7 +284,10 @@
     <div id="service" class="contentWrap">
         <h3>Academic Services</h3>
 
-       
+          <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Leading Guest Editor]</p>
+        <ul>
+            <li>Mathematics, Special Issue "Algebraic Methods for Parallel and Distributed Processing"</li>
+        </ul>
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Selected Journal Reviewer]</p>
         <ul>
@@ -298,9 +301,9 @@
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Conference Program Committee Member]</p>
         <ul>
-		<li>SIGKDD 2023</li>
-		<li>AAAI 2023</li>
-		<li>CIKM 2022</li>		
+		<li>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD'23)</li>
+		<li>The 37th AAAI Conference on Artificial Intelligence (AAAI'23)</li>
+		<li>The 31st ACM International Conference on Information and Knowledge Management (CIKM'22)</li>		
 		
         </ul>
     </div>
