--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
         <h3>Research Interests</h3>
         <p>My primary research areas are Database and Big Data Management and Analytics. Specifically, my current research interests are as follows: </p>
         <ul>
-            <li>Spatiotemporal Database</li>
+            <li>Spatiotemporal Data Management and Analyticse</li>
             <li>Big Graph Data Mining</li>
             <li>Data Quality</li>
             <li>Parallel and Distributed Processing</li>
-            <li>Digital Twin</li>
+        
         </ul>
     </div>
 
@@ -213,7 +213,7 @@
 </li>	
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Jilin Hu. <br/>
-<p>Evolutionary Clustering of Moving Objects. (<b>Best Paper Award</b>)</p>
+<p>Evolutionary Clustering of Moving Objects. (<b>Best Paper</b>)</p>
 <p><i>The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022.</p>
 </li>
 
@@ -263,7 +263,7 @@
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6"></p>
         <ul>
-            <li>Best Paper Award, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li>
+            <li>Best Paper, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li>
 	    <li>One of the Best Papers, The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>       
         </ul>
 
@@ -328,11 +328,13 @@
     <div id="teaching" class="contentWrap">
         <h3>Teaching</h3>
         <ul>
+	<li>Master Group Project Supervisor, DAT8, Spring 2023</li>		
+	<li>Bachelor Group Project Supervisor, SW6, Spring 2023</li>	
 <li>Lecturer, Algorithm and Data Structures, Fall 2022</li>
-<li>Bachelor Group Project Supervisor, DAT1/SW1, Fall 2021, Fall 2022</li>
+<li>Bachelor Group Project Supervisor, SW1, Fall 2021, Fall 2022</li>
             <li>Teaching Assistant, Mobile Software and Technology, Spring 2019, Spring 2020</li>
-            <li>Bachelor Group Project Supervisor, BAIT4/INF4, Spring 2019</li>
-            <li>Bachelor Group Project Supervisor, DAT3/SW3, Fall 2018</li>
+            <li>Bachelor Group Project Supervisor, BAIT4, Spring 2019</li>
+            <li>Bachelor Group Project Supervisor, SW3, Fall 2018</li>
             <li>Teaching Assistant, Algorithm and Data Structures, Fall 2018</li>
         </ul>
     </div>
