--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
 <p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. </p>
 <p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
 </li>	
+
+<li>Junyang Wu, Xiaoze Liu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao, Ziheng Wei. <br/>
+<p>SEA: A Scalable Entity Alignment System. </p>
+<p><i>	The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023.</p>
+</li>	
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Jilin Hu. <br/>
 <p>Evolutionary Clustering of Moving Objects. (<b>Best Paper</b>)</p>
