--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <li>Spatiotemporal Data Management and Analyticse</li>
             <li>Big Graph Data Mining</li>
             <li>Data Quality</li>
-            <li>Parallel and Distributed Processing</li>
+            <li>Knowledge Graph</li>
         
         </ul>
     </div>
