--- a/index.html
+++ b/index.html
@@ -187,10 +187,10 @@
         <h3>Research Interests</h3>
         <p>My primary research areas are Database and Big Data Management and Analytics. Specifically, my current research interests are as follows: </p>
         <ul>
-            <li>Spatiotemporal Data Management and Analyticse</li>
-            <li>Big Graph Data Mining</li>
-            <li>Data Quality</li>
+            <li>Spatiotemporal Data Management and Analytics</li>
             <li>Knowledge Graph</li>
+            <li>Data Quality</li>
+            <li>AI Interaction with Database Technology</li>
         
         </ul>
     </div>
@@ -309,7 +309,7 @@
 		<li>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD'23)</li>
 		<li>The 37th AAAI Conference on Artificial Intelligence (AAAI'23)</li>
 		<li>The 31st ACM International Conference on Information and Knowledge Management (CIKM'22)</li>		
-		
+		<li>The 39th IEEE International Conference on Data Engineering (ICDE'23)</li>
         </ul>
     </div>
 
