--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <h3 style="font-weight: bold;">Assistant Professor, Ph.D.</h3>
 
                         <a href="https://www.cs.aau.dk/">Department of Computer Science,</a><br/>
-                        <a href="https://www.en.aau.dk/">Aalborg University,</a><br/>Selma Lagerlöfs Vej 300 DK-9220, Aalborg Øst, Denmark
+                        <a href="https://www.en.aau.dk/">Aalborg University,</a><br/>3.2.33, Selma Lagerlöfs Vej 300 DK-9220, Aalborg Øst, Denmark
 
                         <br/><br/>
                         <b>E-mail:</b>&nbsp;tianyi [at] cs.aau.dk
@@ -207,13 +207,24 @@
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
 <ol class="rj">
+	
+<li>Jiaqi Wang, <b>Tianyi Li</b>, Anni Wang, Xiaoze Liu, Lu Chen, Jie Chen, Jianye Liu, Junyang Wu, Feifei Li, Yunjun Gao <br/>
+<p>Real-time Workload Pattern Analysis for Large-scale Cloud Databases. </p>
+ <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023.</p>
+</li>	
+	
+<li>Yuanyuan Yao, Dimeng Li, Hailiang Jie, Lu Chen, <b>Tianyi Li</b>, Jie Chen, Jiaqi Wang, Feifei Li, Yunjun Gao<br/>
+<p>SimpleTS: An Efficient and Universal Model Selection Framework for Time Series Forecasting. </p>
+ <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023.</p>
+</li>	
+	
 <li>Xiaoze Liu, Junyang Wu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao. <br/>
-<p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. </p>
+<p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. (<i>to be appeared</i>)</p>
 <p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
 </li>	
 
 <li>Junyang Wu, Xiaoze Liu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao, Ziheng Wei. <br/>
-<p>SEA: A Scalable Entity Alignment System. </p>
+<p>SEA: A Scalable Entity Alignment System. (<i>to be appeared</i>)</p>
 <p><i>	The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023.</p>
 </li>	
 	
@@ -234,12 +245,12 @@
 
                 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen. <br/>
                 <p>TRACE: Real-time Compression of Streaming Trajectories in Road Networks.<a href="http://vldb.org/pvldb/vol14/p1175-chen.pdf"> [Paper]</a></p>
-                <p><i>The 48th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2021 </p>
+                <p><i>The 47th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2021 </p>
             </li>
 
             <li><b>Tianyi Li</b>, Ruikai Huang, Lu Chen, Christian S. Jensen, Torben Bach Pedersen.<br/>
                 <p>Compression of Uncertain Trajectories in Road Networks. <a href="http://www.vldb.org/pvldb/vol13/p1050-li.pdf"> [Paper]</a></p>
-                <p><i>The 47th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020.</p>
+                <p><i>The 46th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020.</p>
             </li>
 
             <li><b>Tianyi Li</b>, Yu Gu, Xiangmin Zhou, Qian Ma, Ge Yu.<br/>
@@ -268,6 +279,7 @@
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6"></p>
         <ul>
+	    <li>Best Paper, 2023 International Conference on Cyber-energy Systems and Intelligent Energies (<i><b>ICCSIE</b></i>), 2022</li>
             <li>Best Paper, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li>
 	    <li>One of the Best Papers, The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>       
         </ul>
@@ -308,8 +320,9 @@
         <ul>
 		<li>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD'23)</li>
 		<li>The 37th AAAI Conference on Artificial Intelligence (AAAI'23)</li>
-		<li>The 31st ACM International Conference on Information and Knowledge Management (CIKM'22)</li>		
 		<li>The 39th IEEE International Conference on Data Engineering (ICDE'23)</li>
+	        <li>The 32nd ACM International Conference on Information and Knowledge Management (CIKM'23)</li>
+		<li>The 31st ACM International Conference on Information and Knowledge Management (CIKM'22)</li>	
         </ul>
     </div>
 
