--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                         <h2 class="clr1" style="margin: 0 0 15px 0">Tianyi Li (李天义)</h2>
                         <h3 style="font-weight: bold;">Assistant Professor, Ph.D.</h3>
 
-                        <a href="https://www.cs.aau.dk/">Department of Computer Science,</a><br/>
-                        <a href="https://www.en.aau.dk/">Aalborg University,</a><br/>3.2.33, Selma Lagerlöfs Vej 300 DK-9220, Aalborg Øst, Denmark
+                        <a href="https://www.cs.aau.dk/">Department of Computer Science</a><br/>
+                        <a href="https://www.en.aau.dk/">Aalborg University</a><br/>3.2.33, Selma Lagerlöfs Vej 300 DK-9220, Aalborg Øst, Denmark
 
                         <br/><br/>
                         <b>E-mail:</b>&nbsp;tianyi [at] cs.aau.dk
