--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 </li>	
 	
 <li>Xiaoze Liu, Junyang Wu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao. <br/>
-<p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. (<i>to be appeared</i>)</p>
+<p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. </p>
 <p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
 </li>	
 
@@ -279,9 +279,9 @@
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6"></p>
         <ul>
-	    <li>Best Paper, 2023 International Conference on Cyber-energy Systems and Intelligent Energies (<i><b>ICCSIE</b></i>), 2023</li>
-            <li><a href="https://icde2022.ieeecomputer.my/best-papers/">Best Paper</a>, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li> 
-	    <li>One of the Best Papers, The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>       
+	    <li><a href="https://icde2022.ieeecomputer.my/best-papers/">Best Paper</a>, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li> 
+	     <li>One of the Best Papers, The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>   
+	     <li>Best Paper, 2023 International Conference on Cyber-energy Systems and Intelligent Energies (<i><b>ICCSIE</b></i>), 2023</li>       
         </ul>
 
      
