--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
 
 <ol class="rj">
 	
-<li>Jiaqi Wang, <b>Tianyi Li</b>, Anni Wang, Xiaoze Liu, Lu Chen, Jie Chen, Jianye Liu, Junyang Wu, Feifei Li, Yunjun Gao <br/>
+<li>Jiaqi Wang, <b>Tianyi Li</b>, Anni Wang, Xiaoze Liu, Lu Chen, Jie Chen, Jianye Liu, Junyang Wu, Feifei Li, Yunjun Gao. <br/>
 <p>Real-time Workload Pattern Analysis for Large-scale Cloud Databases. </p>
  <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023.</p>
 </li>	
 	
-<li>Yuanyuan Yao, Dimeng Li, Hailiang Jie, Lu Chen, <b>Tianyi Li</b>, Jie Chen, Jiaqi Wang, Feifei Li, Yunjun Gao<br/>
+<li>Yuanyuan Yao, Dimeng Li, Hailiang Jie, Lu Chen, <b>Tianyi Li</b>, Jie Chen, Jiaqi Wang, Feifei Li, Yunjun Gao.<br/>
 <p>SimpleTS: An Efficient and Universal Model Selection Framework for Time Series Forecasting. </p>
  <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023.</p>
 </li>	
