--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
 
     <div id="research-interests" class="contentWrap">
         <h3>Research Interests</h3>
-        <p>My primary research areas are Database and Big Data Management and Analytics. Specifically, my current research interests are as follows: </p>
+        <p>My primary research areas are Big Data Management and Database. Specifically, my current research interests are as follows: </p>
         <ul>
-            <li>Spatiotemporal Data Management and Analytics</li>
+            <li>Spatio-temporal Data Management and Analytics</li>
             <li>Knowledge Graph</li>
             <li>Data Quality</li>
             <li>AI Interaction with Database Technology</li>
