--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 
           <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Leading Guest Editor]</p>
         <ul>
-            <li>Mathematics, Special Issue "Algebraic Methods for Parallel and Distributed Processing"</li>
+            <li>Mathematics, Special Issue "Mathematical Modeling for Parallel and Distributed Processing"</li>
         </ul>
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Selected Journal Reviewer]</p>
