--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
         <h3>Publications</h3>
 
         <a href="https://scholar.google.com/citations?hl=da&user=NeeHV-IAAAAJ"> google scholar entry </a>
+	 <a href="https://dblp.org/pid/85/11154-5.html"> DBLP entry </a>
 
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
