--- a/index.html
+++ b/index.html
@@ -306,6 +306,10 @@
         <ul>
             <li>Mathematics, Special Issue "Mathematical Modeling for Parallel and Distributed Processing"</li>
         </ul>
+	      <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[PC Co-chair]</p>
+        <ul>
+            <li>The 28th International Conference on Database Systems for Advanced Applications (DASFAA 2023), Workshop “High Dimensional Vector Data Management”.</li>
+        </ul>
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Selected Journal Reviewer]</p>
         <ul>
@@ -313,7 +317,9 @@
             <li>IEEE Transactions on Knowledge and Data Engineering (TKDE)</li>
 	    <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 	    <li>IEEE Transactions on Circuits and Systems II (TCAS II)</li>
+	    <li>IEEE Transactions on Systems, Man and Cybernetics (TMSCA)</li>
  	    <li>Transactions in GIS </li>
+	    <li>Geoinformatics</li>
           
         </ul>
 
