--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 <p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
 </li>	
 
-<li>Junyang Wu, Xiaoze Liu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao, Ziheng Wei. <br/>
+<li>Junyang Wu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao, Ziheng Wei. <br/>
 <p>SEA: A Scalable Entity Alignment System. </p>
 <p><i>	The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023.</p>
 </li>	
