--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <hr/>
     <div id="bio" class="contentWrap">
         <h3>About Me</h3>
-        <p style="line-height:1.4"> I am an assistant professor with the Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. I recieved the Ph.D. degree from Aalborg University, Denmark, in January 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. From April 2018 to September 2018, I was a research assistant in Aalborg University, Denmark. </p>
+        <p style="line-height:1.4"> I am an assistant professor with the Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. I recieved the Ph.D. degree from Aalborg University, Denmark, in January 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. I have served on the Program Committee of many international conferences including ICDE, KDD, AAAI, and CIKM, and as a reviewer of international journals including VLDBJ, TKDE, TNSE, etc. I won several awards including the ICDE 2022 Best Paper Award and NDBC 2022 One of the Best Papers Award. </p>
     </div>
 
 
@@ -202,7 +202,7 @@
 
         <h3>Publications</h3>
 <p>
-        <a href="https://scholar.google.com/citations?hl=da&user=NeeHV-IAAAAJ"> google scholar entry </a> <br />
+        <a href="https://scholar.google.com/citations?hl=da&user=NeeHV-IAAAAJ"> Google Scholar entry </a> <br />
 	 <a href="https://dblp.org/pid/85/11154-5.html"> DBLP entry </a>
 </p>
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
