--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
 	
 
     <div id="news" class="contentWrap">
-        <h3>News</h3>
-        <p> Multiple Postdoc/PhD positions in the Data Engineering, Science and Systems (DESS) group at Aalborg University are available. The positions concern aspects of the analysis of data related to moving-object mobility. 
-		People who applies the position sucessfully will work with <a href="https://homes.cs.aau.dk/~torp/"> Prof. Kristian Torp</a>, <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, Asst. Prof. Tianyi Li.
-		More informatino can be found at <a href="https://listserv.acm.org/SCRIPTS/WA-ACMLPX.CGI?A2=MOD-DBWORLD;23eb5a30.2307"></a> </p>
+        <h3><b>Multiple Postdoc/PhD positions in the Data Engineering, Science and Systems (DESS) group at Aalborg University are available</b></h3>
+        <p> The positions concern aspects of the analysis of data related to moving-object mobility.  </p>
+	    <p>  People who applies the position sucessfully will work with <a href="https://homes.cs.aau.dk/~torp/"> Prof. Kristian Torp</a>, <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, and Asst. Prof. Tianyi Li.  </p>
+		<p> More informatino can be found <a href="https://listserv.acm.org/SCRIPTS/WA-ACMLPX.CGI?A2=MOD-DBWORLD;23eb5a30.2307"> here </a> </p>
     </div>
 
     <hr/>
@@ -290,7 +290,7 @@
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6"></p>
         <ul>
 	    <li><a href="https://icde2022.ieeecomputer.my/best-papers/">Best Paper</a>, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li> 
-	     <li>One of the Best Papers, The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>   
+	     <li>One of the Best Papers (萨师煊优秀论文奖), The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>   
 	     <li>Best Paper, 2023 International Conference on Cyber-energy Systems and Intelligent Energies (<i><b>ICCSIE</b></i>), 2023</li>       
         </ul>
 
@@ -324,6 +324,7 @@
         <ul>
             <li>The VLDB Journal (VLDBJ)</li>
             <li>IEEE Transactions on Knowledge and Data Engineering (TKDE)</li>
+	    <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 	    <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 	    <li>IEEE Transactions on Circuits and Systems II (TCAS II)</li>
 	    <li>IEEE Transactions on Systems, Man and Cybernetics (TMSCA)</li>
