--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
     <div id="bio" class="contentWrap">
         <h3>About Me</h3>
         <p style="line-height:1.4"> I am an assistant professor with the Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. 
+		I am currently a member of the Data Engineering, Science and Systems (DESS) group, led by ACM/IEEE fellow and Academia Europaea member, <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>.
 		I recieved the Ph.D. degree from Aalborg University, Denmark, in January 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. I have served on the Program Committee of many international conferences including ICDE, KDD, AAAI, and CIKM, and as a reviewer of international journals including VLDBJ, TKDE, TNSE, etc. I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper Award</a> and NDBC 2022 One of the Best Papers Award (萨师煊优秀论文奖). </p>
     </div>
 
@@ -198,7 +199,7 @@
 	
 
     <div id="news" class="contentWrap">
-        <h3><b>Multiple Postdoc/PhD positions in the Data Engineering, Science and Systems (DESS) group at Aalborg University are available</b></h3>
+        <h3><b>Multiple Postdoc/PhD positions in the Data Engineering, Science and Systems (DESS) group are available</b></h3>
         <p> The positions concern aspects of the analysis of data related to moving-object mobility.  </p>
 	    <p>  People who applies the position sucessfully will work with <a href="https://homes.cs.aau.dk/~torp/"> Prof. Kristian Torp</a>, <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, and Asst. Prof. Tianyi Li.  </p>
 		<p> More informatino can be found <a href="https://listserv.acm.org/SCRIPTS/WA-ACMLPX.CGI?A2=MOD-DBWORLD;23eb5a30.2307"> here </a> </p>
