--- a/index.html
+++ b/index.html
@@ -200,9 +200,7 @@
 
     <div id="news" class="contentWrap">
         <h3><b>Multiple Postdoc/PhD positions in the Data Engineering, Science and Systems (DESS) group are available</b></h3>
-        <p> The positions concern aspects of the analysis of data related to moving-object mobility.  </p>
-	    <p>  People who applies the position sucessfully will work with <a href="https://homes.cs.aau.dk/~torp/"> Prof. Kristian Torp</a>, <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, and Asst. Prof. Tianyi Li.  </p>
-		<p> More informatino can be found <a href="https://listserv.acm.org/SCRIPTS/WA-ACMLPX.CGI?A2=MOD-DBWORLD;23eb5a30.2307"> here </a> </p>
+        <p> The positions concern aspects of the analysis of data related to moving-object mobility.  People who applies the position sucessfully will work with <a href="https://homes.cs.aau.dk/~torp/"> Prof. Kristian Torp</a>, <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, and Asst. Prof. Tianyi Li.  More informatino can be found <a href="https://listserv.acm.org/SCRIPTS/WA-ACMLPX.CGI?A2=MOD-DBWORLD;23eb5a30.2307"> here </a>. </p>
     </div>
 
     <hr/>
@@ -325,7 +323,7 @@
         <ul>
             <li>The VLDB Journal (VLDBJ)</li>
             <li>IEEE Transactions on Knowledge and Data Engineering (TKDE)</li>
-	    <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
+	    <li>IEEE Transactions on Network Science and Engineering (TNSE)</li>
 	    <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 	    <li>IEEE Transactions on Circuits and Systems II (TCAS II)</li>
 	    <li>IEEE Transactions on Systems, Man and Cybernetics (TMSCA)</li>
@@ -364,6 +362,7 @@
     <div id="teaching" class="contentWrap">
         <h3>Teaching</h3>
         <ul>
+	<li>Lecturer, Algorithm and Data Structures, Fall 2023</li>
 	<li>Master Group Project Supervisor, DAT8, Spring 2023</li>		
 	<li>Bachelor Group Project Supervisor, SW6, Spring 2023</li>	
 <li>Lecturer, Algorithm and Data Structures, Fall 2022</li>
