--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="pragma" content="no-cache" />
     <style type="text/css">
         body {
-            font-family:Arial,'Times New Roman','Microsoft YaHei',SimHei;
+            font-family:Arial,Calibri,'Microsoft YaHei',SimHei;
             font-size: 12pt;
             min-width: 1200px;
         }
