--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
         <h3>About Me</h3>
         <p style="line-height:1.4"> I am an assistant professor with the Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. 
 		I am a member of <a href="https://www.cs.aau.dk/research/Data-Engineering-Science-and-Systems"> Data Engineering, Science and Systems (DESS)</a> group. 
-		I recieved the Ph.D. degree from Aalborg University, Denmark, in January 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. I have served on the Program Committee of many international conferences including ICDE, KDD, AAAI, and CIKM, and as a reviewer of international journals including VLDBJ, TKDE, TNSE, etc. I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper Award</a> and NDBC 2022 One of the Best Papers Award (萨师煊优秀论文奖). </p>
+		I recieved the Ph.D. degree from Aalborg University, Denmark, in January 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. 
+		I have served on the Program Committees of many international conferences including ICDE, KDD, AAAI, and CIKM, and as a reviewer of international journals including VLDBJ, TKDE, TNSE, etc. I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, ICCSIE 2023 Best Paper, etc. </p>
     </div>
 
 
@@ -289,7 +290,7 @@
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6"></p>
         <ul>
 	    <li><a href="https://icde2022.ieeecomputer.my/best-papers/">Best Paper</a>, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li> 
-	     <li>One of the Best Papers (萨师煊优秀论文奖), The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>   
+	     <li>One of the Best Papers (萨师煊优秀学生论文奖), The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>   
 	     <li>Best Paper, 2023 International Conference on Cyber-energy Systems and Intelligent Energies (<i><b>ICCSIE</b></i>), 2023</li>       
         </ul>
 
