--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <hr/>
     <div id="bio" class="contentWrap">
         <h3>About Me</h3>
-        <p style="line-height:1.4"> I am an assistant professor with the Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. 
+        <p style="line-height:1.4"> I am a tenure-track assistant professor with the Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. 
 		I am a member of <a href="https://www.cs.aau.dk/research/Data-Engineering-Science-and-Systems"> Data Engineering, Science and Systems (DESS)</a> group. 
 		I recieved the Ph.D. degree from Aalborg University, Denmark, in January 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. 
 		I have served on the Program Committees of many international conferences including ICDE, KDD, AAAI, and CIKM, and as a reviewer of international journals including VLDBJ, TKDE, TNSE, etc. I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, and ICCSIE 2023 Best Paper. </p>
