--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 	    <li>IEEE Transactions on Network Science and Engineering (TNSE)</li>
 	    <li>IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)</li>
 	    <li>IEEE Transactions on Circuits and Systems II (TCAS II)</li>
-	    <li>IEEE Transactions on Systems, Man and Cybernetics (TMSCA)</li>
+	    <li>IEEE Transactions on Systems, Man and Cybernetics (TMSC)</li>
  	    <li>Transactions in GIS </li>
 	    <li>Geoinformatics</li>
           
