--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         <h3>About Me</h3>
         <p style="line-height:1.4"> I am a tenure-track assistant professor with Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. 
 		I am a member of <a href="https://www.cs.aau.dk/research/Data-Engineering-Science-and-Systems"> Data Engineering, Science and Systems (DESS)</a> group. 
-		I recieved the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>, and <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>. 
-		I have served on the Program Committees of top conferences including ICDE, KDD, AAAI, etc, and as a reviewer of prestigious journals including VLDBJ, TKDE, TNSE, etc. I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, and ICCSIE 2023 Best Paper. </p>
+		I recieved the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>, and <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>. 
+		I have served on the Program Committees of top conferences including ICDE, KDD, AAAI, etc, and as a reviewer of prestigious journals including VLDBJ, TKDE, TNSE, etc. I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper. </p>
     </div>
 
 
