--- a/index.html
+++ b/index.html
@@ -217,6 +217,11 @@
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
 <ol class="rj">
+
+<li>Zhen Song, Yu Gu, <b>Tianyi Li*</b>, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
+<p>ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling. </p>
+ <p><i>The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024.</p>
+</li>	
 	
 <li>Jiaqi Wang, <b>Tianyi Li*</b>, Anni Wang, Xiaoze Liu, Lu Chen, Jie Chen, Jianye Liu, Junyang Wu, Feifei Li, Yunjun Gao. <br/>
 <p>Real-time Workload Pattern Analysis for Large-scale Cloud Databases. </p>
