--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Conference Program Committee Member]</p>
         <ul>
 		<li>The 38th AAAI Conference on Artificial Intelligence (AAAI'24)</li>
-		<li>the 2024 SIAM International Conference on Data Mining (SDM’24)</li>
+		<li>The 2024 SIAM International Conference on Data Mining (SDM’24)</li>
 		<li>The 37th AAAI Conference on Artificial Intelligence (AAAI'23)</li>
 		<li>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD'23)</li>
 		<li>The 39th IEEE International Conference on Data Engineering (ICDE'23)</li>
