--- a/index.html
+++ b/index.html
@@ -220,57 +220,57 @@
 
 <li>Zhen Song, Yu Gu, <b>Tianyi Li*</b>, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
 <p>ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling. </p>
- <p><i>The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024.</p>
+ <p><i>The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024 (CORE A*).</p>
 </li>	
 	
 <li>Jiaqi Wang, <b>Tianyi Li*</b>, Anni Wang, Xiaoze Liu, Lu Chen, Jie Chen, Jianye Liu, Junyang Wu, Feifei Li, Yunjun Gao. <br/>
 <p>Real-time Workload Pattern Analysis for Large-scale Cloud Databases. </p>
- <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023.</p>
+ <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023 (CORE A*).</p>
 </li>	
 	
 <li>Yuanyuan Yao, Dimeng Li, Hailiang Jie, Lu Chen, <b>Tianyi Li</b>, Jie Chen, Jiaqi Wang, Feifei Li, Yunjun Gao.<br/>
 <p>SimpleTS: An Efficient and Universal Model Selection Framework for Time Series Forecasting. </p>
- <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023.</p>
+ <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023 (CORE A*).</p>
 </li>	
 	
 <li>Xiaoze Liu, Junyang Wu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao. <br/>
 <p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. </p>
-<p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023.</p>
+<p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023 (CORE A*).</p>
 </li>	
 
 <li>Junyang Wu, <b>Tianyi Li*</b>, Lu Chen, Yunjun Gao, Ziheng Wei. <br/>
 <p>SEA: A Scalable Entity Alignment System. </p>
-<p><i>	The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023.</p>
+<p><i>	The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023 (CORE A*).</p>
 </li>	
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Yunjun Gao, Jilin Hu. <br/>
 <p>Evolutionary Clustering of Moving Objects. (<b>Best Paper</b>)</p>
-<p><i>The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022.</p>
+<p><i>The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022 (CORE A*).</p>
 </li>
 
 <li>Yunjun Gao, Xiaoze Liu, Jingxuan Wu, <b>Tianyi Li</b>, Pengfei Wang, Lu Chen.<br/>
 <p>ClusterEA: Scalable Entity Alignment with Stochastic Training and Normalized Mini-batch Similarities.</p>
-<p><i>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022.</p>
+<p><i>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022 (CORE A*).</p>
 </li>
 
 <li>Yushuai Li, <b>Tianyi Li</b>, Huaguang Zhang, Xiangpeng Xie, Qiuye Sun.<br/>
                 <p>Distributed Resilient Double-Gradient-Descent Based Energy Management Strategy for Multi-Energy System under DoS Attacks.</p>
-                <p><i>IEEE Transactions on Network Science and Engineering</i> (<i><b>TNSE</b></i>), 2022.</p>
+                <p><i>IEEE Transactions on Network Science and Engineering</i> (<i><b>TNSE</b></i>), 2022 (JCR Q1).</p>
             </li>
 
                 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen. <br/>
                 <p>TRACE: Real-time Compression of Streaming Trajectories in Road Networks.<a href="http://vldb.org/pvldb/vol14/p1175-chen.pdf"> [Paper]</a></p>
-                <p><i>The 47th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2021 </p>
+                <p><i>The 47th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2021 (CORE A*). </p>
             </li>
 
             <li><b>Tianyi Li</b>, Ruikai Huang, Lu Chen, Christian S. Jensen, Torben Bach Pedersen.<br/>
                 <p>Compression of Uncertain Trajectories in Road Networks. <a href="http://www.vldb.org/pvldb/vol13/p1050-li.pdf"> [Paper]</a></p>
-                <p><i>The 46th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020.</p>
+                <p><i>The 46th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020 (CORE A*).</p>
             </li>
 
             <li><b>Tianyi Li</b>, Yu Gu, Xiangmin Zhou, Qian Ma, Ge Yu.<br/>
                 <p>An Effective and Efficient Truth Discovery Framework over Data Streams. <a href="https://openproceedings.org/2017/conf/edbt/paper-41.pdf"> [Paper]</a></p>
-                <p><i>The 20th International Conference on Extending Database Technology</i> (<i><b>EDBT</b></i>), 2017.</p>
+                <p><i>The 20th International Conference on Extending Database Technology</i> (<i><b>EDBT</b></i>), 2017 (CORE A).</p>
             </li>
 
           
