--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
 <p>
         <a href="https://scholar.google.com/citations?hl=da&user=NeeHV-IAAAAJ"> Google Scholar entry </a> <br />
 	 <a href="https://dblp.org/pid/85/11154-5.html"> DBLP entry </a>
+	<a (corresponding author *) </a>
 </p>
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
@@ -295,7 +296,7 @@
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6"></p>
         <ul>
 	    <li><a href="https://icde2022.ieeecomputer.my/best-papers/">Best Paper</a>, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li> 
-	     <li>One of the Best Papers (萨师煊优秀学生论文奖), The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>   
+	     <li>One of the Best Papers, The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>   
 	     <li>Best Paper, 2023 International Conference on Cyber-energy Systems and Intelligent Energies (<i><b>ICCSIE</b></i>), 2023</li>       
         </ul>
 
