--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
         <h3>Publications</h3>
 <p>
         <a href="https://scholar.google.com/citations?hl=da&user=NeeHV-IAAAAJ"> Google Scholar entry </a> <br />
-	 <a href="https://dblp.org/pid/85/11154-5.html"> DBLP entry </a>
-	<a (corresponding author *) </a>
+	 <a href="https://dblp.org/pid/85/11154-5.html"> DBLP entry </a> <br />
+	
 </p>
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
