--- a/index.html
+++ b/index.html
@@ -310,6 +310,11 @@
             <li>Yumeng Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2024), Topic: Trajectory Analytics </li>
             <li>Zhen Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2023), Topic: Spatio-Temporal Graph Neural Networks</li>        
         </ul>
+	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Postdocs]</p>
+        <ul>
+            <li>Tiantian Liu (from September 2023)</li>, Topic: Optimized Maritime Communication </li>
+            <li>Hengyu Liu (from December 2023), Topic: Maritime Data Analysis</li>        
+        </ul>
      
     </div>
 
