--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
      
     </div>
 	<div id="student" class="contentWrap">
-        <h3>Students</h3>
+        <h3>Students/Collobrators</h3>
 
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Visiting Research Students]</p>
         <ul>
