--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </ul>
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Postdocs]</p>
         <ul>
-            <li>Tiantian Liu (from September 2023)</li>, Topic: Optimized Maritime Communication </li>
+            <li>Tiantian Liu (from September 2023), Topic: Optimized Maritime Communication </li>
             <li>Hengyu Liu (from December 2023), Topic: Maritime Data Analysis</li>        
         </ul>
      
