--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
         <p style="line-height:1.4"> I am a tenure-track assistant professor with Department of Computer Science, <a href="https://www.en.aau.dk/">Aalborg University</a>, Denmark. 
 		I am a member of <a href="https://www.cs.aau.dk/research/Data-Engineering-Science-and-Systems"> Data Engineering, Science and Systems (DESS)</a> group. 
 		I recieved the Ph.D. degree from Aalborg University, Denmark, in 2022, under the supervision of <a href="http://people.cs.aau.dk/~csj"> Prof. Christian S. Jensen</a>, <a href="https://person.zju.edu.cn/en/luchen"> Prof. Lu Chen</a>, and <a href="http://people.cs.aau.dk/~tbp"> Prof. Torben Bach Pedersen</a>. 
-		I have served on the Program Committees of top conferences including ICDE, KDD, AAAI, etc, and as a reviewer of prestigious journals including VLDBJ, TKDE, TNSE, etc. I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper. </p>
+		I won several awards including <a href="https://icde2022.ieeecomputer.my/best-papers/">ICDE 2022 Best Paper</a>, NDBC 2022 One of the Best Papers, and ICCSIE 2022 Best Paper.
+		I have served on the Program Committees of top conferences including ICDE, KDD, AAAI, etc, and as a reviewer of prestigious journals including VLDBJ, TKDE, TNSE, etc.  </p>
     </div>
 
 
@@ -297,7 +298,7 @@
         <ul>
 	    <li><a href="https://icde2022.ieeecomputer.my/best-papers/">Best Paper</a>, The 36th IEEE International Conference on Data Engineering (<i><b>ICDE</b></i>), 2022</li> 
 	     <li>One of the Best Papers, The 39th National Database Conference (<i><b>NDBC</b></i>), 2022</li>   
-	     <li>Best Paper, 2023 International Conference on Cyber-energy Systems and Intelligent Energies (<i><b>ICCSIE</b></i>), 2023</li>       
+	     <li>Best Paper, 2022 International Conference on Cyber-energy Systems and Intelligent Energies (<i><b>ICCSIE</b></i>), 2022</li>       
         </ul>
 
      
