--- a/index.html
+++ b/index.html
@@ -306,6 +306,10 @@
 	<div id="student" class="contentWrap">
         <h3>Students/Collobrators</h3>
 
+	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[PhD Students]</p>
+        <ul>
+            <li>Conglei Xu (March 2023 to present), Topic: Fairness-aware Graph Neural Networks </li>, (Co-supervisor; Main supervisor: Arijit Khan)
+        </ul>
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Visiting Research Students]</p>
         <ul>
             <li>Yumeng Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2024), Topic: Trajectory Analytics </li>
