--- a/index.html
+++ b/index.html
@@ -308,17 +308,17 @@
 
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[PhD Students]</p>
         <ul>
-            <li>Conglei Xu (March 2023 to present), Topic: Fairness-aware Graph Neural Networks </li>, (Co-supervisor; Main supervisor: Arijit Khan)
+            <li>Conglei Xu (March 2023 to present), Topic: Fairness-aware Graph Neural Networks. (Co-supervisor; Main supervisor: Arijit Khan) </li>
         </ul>
         <p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Visiting Research Students]</p>
         <ul>
-            <li>Yumeng Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2024), Topic: Trajectory Analytics </li>
-            <li>Zhen Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2023), Topic: Spatio-Temporal Graph Neural Networks</li>        
+            <li>Yumeng Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2024), Topic: Trajectory Analytics. </li>
+            <li>Zhen Song (Ph.D. candidate from Northeastern Univeristy, October 2022 to September 2023), Topic: Spatio-Temporal Graph Neural Networks.</li>        
         </ul>
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Postdocs]</p>
         <ul>
-            <li>Tiantian Liu (from September 2023), Topic: Optimized Maritime Communication </li>
-            <li>Hengyu Liu (from December 2023), Topic: Maritime Data Analysis</li>        
+            <li>Tiantian Liu (from September 2023), Topic: Optimized Maritime Communication. (Joint advisors: Kristian Torp and Christian S. Jensen) </li>
+            <li>Hengyu Liu (from December 2023), Topic: Maritime Data Analysis (Joint advisors: Kristian Torp and Christian S. Jensen) </li>        
         </ul>
      
     </div>
