--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Postdocs]</p>
         <ul>
             <li>Tiantian Liu (from September 2023), Topic: Optimized Maritime Communication. (Joint advisors: Kristian Torp and Christian S. Jensen) </li>
-            <li>Hengyu Liu (from December 2023), Topic: Maritime Data Analysis (Joint advisors: Kristian Torp and Christian S. Jensen) </li>        
+            <li>Hengyu Liu (from December 2023), Topic: Maritime Data Analysis. (Joint advisors: Kristian Torp and Christian S. Jensen) </li>        
         </ul>
      
     </div>
