--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
      
     </div>
 	<div id="student" class="contentWrap">
-        <h3>Students/Collobrators</h3>
+        <h3>Students/Collaborators</h3>
 
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[PhD Students]</p>
         <ul>
@@ -317,8 +317,8 @@
         </ul>
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[Postdocs]</p>
         <ul>
-            <li>Tiantian Liu (from September 2023), Topic: Optimized Maritime Communication. (Joint advisors: Kristian Torp and Christian S. Jensen) </li>
-            <li>Hengyu Liu (from December 2023), Topic: Maritime Data Analysis. (Joint advisors: Kristian Torp and Christian S. Jensen) </li>        
+            <li>Tiantian Liu (September 2023 to present), Topic: Optimized Maritime Communication. (Joint advisors: Kristian Torp and Christian S. Jensen) </li>
+            <li>Hengyu Liu (December 2023 to present), Topic: Maritime Data Analysis. (Joint advisors: Kristian Torp and Christian S. Jensen) </li>        
         </ul>
      
     </div>
