--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
      
     </div>
 	<div id="student" class="contentWrap">
-        <h3>Students/Collaborators</h3>
+        <h3>Students</h3>
 
 	<p style="margin-top: 20px;font-weight: bold;color: #0476d6">[PhD Students]</p>
         <ul>
