--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 </li>	
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Yunjun Gao, Jilin Hu. <br/>
-<p>Evolutionary Clustering of Moving Objects. (<b style="color:red">Best Paper</b>)</p>
+<p>Evolutionary Clustering of Moving Objects. (<b>Best Paper</b>)</p>
 <p><i>The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022 (<b>CORE A*</b>).</p>
 </li>
 
