--- a/index.html
+++ b/index.html
@@ -219,9 +219,15 @@
  <p style="margin-top: 20px;"><span style="font-weight: bold;color: #0476d6">[Selected Conference and Journal Papers]</span>&nbsp;&nbsp;</p>
 
 <ol class="rj">
+	
 
 <li>Zhen Song, Yu Gu, <b>Tianyi Li*</b>, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
 <p>ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling. </p>
+ <p><i>The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024 (<b>CORE A*</b>).</p>
+</li>	
+	
+<li>Danlei Hu, Lu Chen, Hanxi Fang, Ziquan Fang, <b>Tianyi Li</b>, Yunjun Gao. <br/>
+<p>Spatio-Temporal Trajectory Similarity Measures: A Comprehensive Survey and Quantitative Study. </p>
  <p><i>The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024 (<b>CORE A*</b>).</p>
 </li>	
 	
@@ -246,7 +252,7 @@
 </li>	
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Yunjun Gao, Jilin Hu. <br/>
-<p>Evolutionary Clustering of Moving Objects. (<b style="color:red">Best Paper</b>)</p>
+<p>Evolutionary Clustering of Moving Objects. <b style="color:red">(Best Paper)</b></p>
 <p><i>The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022 (<b>CORE A*</b>).</p>
 </li>
 
