--- a/index.html
+++ b/index.html
@@ -261,10 +261,10 @@
 <p><i>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022 (<b>CORE A*</b>).</p>
 </li>
 
-<li>Yushuai Li, <b>Tianyi Li</b>, Huaguang Zhang, Xiangpeng Xie, Qiuye Sun.<br/>
-                <p>Distributed Resilient Double-Gradient-Descent Based Energy Management Strategy for Multi-Energy System under DoS Attacks.</p>
-                <p><i>IEEE Transactions on Network Science and Engineering</i> (<i><b>TNSE</b></i>), 2022 (<b>JCR Q1</b>).</p>
-            </li>
+<!--<li>Yushuai Li, <b>Tianyi Li</b>, Huaguang Zhang, Xiangpeng Xie, Qiuye Sun.<br/>-->
+               <!-- <p>Distributed Resilient Double-Gradient-Descent Based Energy Management Strategy for Multi-Energy System under DoS Attacks.</p>-->
+               <!-- <p><i>IEEE Transactions on Network Science and Engineering</i> (<i><b>TNSE</b></i>), 2022 (<b>JCR Q1</b>).</p>-->
+          <!--  </li>-->
 
                 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen. <br/>
                 <p>TRACE: Real-time Compression of Streaming Trajectories in Road Networks.<a href="http://vldb.org/pvldb/vol14/p1175-chen.pdf"> [Paper]</a></p>
@@ -276,10 +276,10 @@
                 <p><i>The 46th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020 (<b>CORE A*</b>).</p>
             </li>
 
-            <li><b>Tianyi Li</b>, Yu Gu, Xiangmin Zhou, Qian Ma, Ge Yu.<br/>
-                <p>An Effective and Efficient Truth Discovery Framework over Data Streams. <a href="https://openproceedings.org/2017/conf/edbt/paper-41.pdf"> [Paper]</a></p>
-                <p><i>The 20th International Conference on Extending Database Technology</i> (<i><b>EDBT</b></i>), 2017 (<b>CORE A</b>).</p>
-            </li>
+          <!--  <li><b>Tianyi Li</b>, Yu Gu, Xiangmin Zhou, Qian Ma, Ge Yu.<br/>-->
+             <!--   <p>An Effective and Efficient Truth Discovery Framework over Data Streams. <a href="https://openproceedings.org/2017/conf/edbt/paper-41.pdf"> [Paper]</a></p>-->
+             <!--   <p><i>The 20th International Conference on Extending Database Technology</i> (<i><b>EDBT</b></i>), 2017 (<b>CORE A</b>).</p>-->
+          <!--  </li>-->
 
           
  </ol>
