--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 <li>Zhen Song, Yu Gu, <b>Tianyi Li*</b>, Qing Sun, Yanfeng Zhang, Christian S. Jensen, Ge Yu. <br/>
 <p>ADGNN: Towards Scalable GNN Training with Aggregation-Difference Aware Sampling. </p>
- <p><i>The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024 (<b>CORE A*</b>).</p>
+ <p><i>The 2024 ACM SIGMOD/PODS International Conference on Management of Data</i> (<i><b>SIGMOD</b></i>), 2024 (<b>CORE A*, CCF A</b>).</p>
 </li>	
 	
 <li>Danlei Hu, Lu Chen, Hanxi Fang, Ziquan Fang, <b>Tianyi Li</b>, Yunjun Gao. <br/>
@@ -233,32 +233,32 @@
 	
 <li>Jiaqi Wang, <b>Tianyi Li*</b>, Anni Wang, Xiaoze Liu, Lu Chen, Jie Chen, Jianye Liu, Junyang Wu, Feifei Li, Yunjun Gao. <br/>
 <p>Real-time Workload Pattern Analysis for Large-scale Cloud Databases. </p>
- <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023 (<b>CORE A*</b>).</p>
+ <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023 (<b>CORE A*, CCF A</b>).</p>
 </li>	
 	
 <li>Yuanyuan Yao, Dimeng Li, Hailiang Jie, Lu Chen, <b>Tianyi Li</b>, Jie Chen, Jiaqi Wang, Feifei Li, Yunjun Gao.<br/>
 <p>SimpleTS: An Efficient and Universal Model Selection Framework for Time Series Forecasting. </p>
- <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023 (<b>CORE A*</b>).</p>
+ <p><i>The 49th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2023 (<b>CORE A*, CCF A</b>).</p>
 </li>	
 	
 <li>Xiaoze Liu, Junyang Wu, <b>Tianyi Li</b>, Lu Chen, Yunjun Gao. <br/>
 <p>Unsupervised Entity Alignment for Temporal Knowledge Graphs. </p>
-<p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023 (<b>CORE A*</b>).</p>
+<p><i>The 2023 ACM Web Conference</i> (<i><b>WWW</b></i>), 2023 (<b>CORE A*, CCF A</b>).</p>
 </li>	
 
 <li>Junyang Wu, <b>Tianyi Li*</b>, Lu Chen, Yunjun Gao, Ziheng Wei. <br/>
 <p>SEA: A Scalable Entity Alignment System. </p>
-<p><i>	The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023 (<b>CORE A*</b>).</p>
+<p><i>	The 46th International ACM SIGIR Conference on Research and Development in Information Retrieval</i> (<i><b>SIGIR</b></i>), 2023 (<b>CORE A*, CCF A</b>).</p>
 </li>	
 	
 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen, Yunjun Gao, Jilin Hu. <br/>
 <p>Evolutionary Clustering of Moving Objects. <b style="color:red">(Best Paper)</b></p>
-<p><i>The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022 (<b>CORE A*</b>).</p>
+<p><i>The 36th IEEE International Conference on Data Engineering</i> (<i><b>ICDE</b></i>), 2022 (<b>CORE A*, CCF A</b>).</p>
 </li>
 
 <li>Yunjun Gao, Xiaoze Liu, Jingxuan Wu, <b>Tianyi Li</b>, Pengfei Wang, Lu Chen.<br/>
 <p>ClusterEA: Scalable Entity Alignment with Stochastic Training and Normalized Mini-batch Similarities.</p>
-<p><i>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022 (<b>CORE A*</b>).</p>
+<p><i>The 28th ACM SIGKDD Conference on Knowledge Discovery and Data Mining</i> (<i><b>KDD</b></i>), 2022 (<b>CORE A*, CCF A</b>).</p>
 </li>
 
 <!--<li>Yushuai Li, <b>Tianyi Li</b>, Huaguang Zhang, Xiangpeng Xie, Qiuye Sun.<br/>-->
@@ -268,12 +268,12 @@
 
                 <li><b>Tianyi Li</b>, Lu Chen, Christian S. Jensen, Torben Bach Pedersen. <br/>
                 <p>TRACE: Real-time Compression of Streaming Trajectories in Road Networks.<a href="http://vldb.org/pvldb/vol14/p1175-chen.pdf"> [Paper]</a></p>
-                <p><i>The 47th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2021 (<b>CORE A*</b>). </p>
+                <p><i>The 47th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2021 (<b>CORE A*, CCF A</b>). </p>
             </li>
 
             <li><b>Tianyi Li</b>, Ruikai Huang, Lu Chen, Christian S. Jensen, Torben Bach Pedersen.<br/>
                 <p>Compression of Uncertain Trajectories in Road Networks. <a href="http://www.vldb.org/pvldb/vol13/p1050-li.pdf"> [Paper]</a></p>
-                <p><i>The 46th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020 (<b>CORE A*</b>).</p>
+                <p><i>The 46th International Conference on Very Large Data Bases </i> (<i><b>PVLDB</b></i>), 2020 (<b>CORE A*, CCF A</b>).</p>
             </li>
 
           <!--  <li><b>Tianyi Li</b>, Yu Gu, Xiangmin Zhou, Qian Ma, Ge Yu.<br/>-->
